<resources>
    <string name="app_name">CO-vid\'s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_account">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="communicate">Communicate</string>
    <string name="account">Account</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="begin">Begin!</string>
    <string name="about">About</string>
    <string name="title_activity_danger_symp">DangerSympActivity</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <string name="title_activity_mild_symp">MildSympActivity</string>
    <string name="title_activity_covid_like">CovidLikeActivity</string>
</resources>
