<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/button"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:background="#D0AD232F"
        android:onClick="logout"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="88dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="358dp"
        android:layout_height="282dp"
        android:text="Welcome to CO-vid! This is an app designed to help leverage statistics to more aptly deliver tests and medical suipplies(Which are in short supply) to areas and locales that need it before an outbreak gets out of control. If you downloaded this app, you're probably worried that you might be exhibiting symptoms of corona virus. If that's the case please take the self-checker below(adapted from CDC guidlines).  By downloading this app you are already contributing to helping us understand this disease and save lives! Thank you so mcuh!"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button4"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="#D532AA37"
        android:text="@string/begin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="startTest"/>

</androidx.constraintlayout.widget.ConstraintLayout>